--- a/src/main/resources/com/example/stonecollection/hello-view.fxml
+++ b/src/main/resources/com/example/stonecollection/hello-view.fxml
@@ -4,11 +4,17 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.image.Image?>
 <VBox alignment="CENTER" prefHeight="250.0" prefWidth="408.0" spacing="20.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.stonecollection.HelloController">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
 
     <Label prefHeight="49.0" prefWidth="202.0" text="Welcome to the stone collection app" />
+    <ImageView fitWidth="270" fitHeight="165">
+    <Image url="@img/stones1.png"></Image>
+    </ImageView>
     <Button onAction="#startClick" prefHeight="26.0" prefWidth="71.0" text="Start" />
+
 </VBox>
