--- a/src/main/resources/com/example/stonecollection/login-view.fxml
+++ b/src/main/resources/com/example/stonecollection/login-view.fxml
@@ -2,19 +2,21 @@
 
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="250.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.stonecollection.LoginController">
+<AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="250.0" prefWidth="527.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.stonecollection.LoginController">
    <children>
-      <GridPane layoutY="25.0" prefHeight="200.0" prefWidth="400.0">
+      <GridPane layoutX="7.0" layoutY="25.0" prefHeight="200.0" prefWidth="527.0">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="186.0" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="268.8" minWidth="10.0" prefWidth="204.8" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="192.99999999999994" minWidth="10.0" prefWidth="192.99999999999994" />
         </columnConstraints>
         <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="66.4" minHeight="10.0" prefHeight="64.4" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="68.4" minHeight="10.0" prefHeight="68.4" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
 
@@ -27,23 +29,28 @@
                <Font size="14.0" />
             </font></Label>
 
-          <TextField prefHeight="36.0" fx:id="usernameTxt" prefWidth="177.0" GridPane.columnIndex="1" GridPane.rowIndex="0">
+          <TextField fx:id="usernameTxt" prefHeight="36.0" prefWidth="177.0" GridPane.columnIndex="1" GridPane.rowIndex="0">
             <GridPane.margin>
                <Insets right="10.0" />
             </GridPane.margin></TextField>
-          <PasswordField prefHeight="35.0" fx:id="passwordTxt" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+          <PasswordField fx:id="passwordTxt" prefHeight="35.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
             <GridPane.margin>
                <Insets right="10.0" />
             </GridPane.margin></PasswordField>
 
-          <Button alignment="CENTER" onAction="#loginClick" mnemonicParsing="false" prefHeight="32.0" prefWidth="84.0" text="Log in" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.rowIndex="2">
+          <Button alignment="CENTER" mnemonicParsing="false" onAction="#loginClick" prefHeight="32.0" prefWidth="84.0" text="Log in" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.rowIndex="2">
             <GridPane.margin>
                <Insets left="165.0" />
             </GridPane.margin>
             <font>
                <Font name="System Bold" size="14.0" />
             </font></Button>
+
+          <ImageView fitHeight="150.0" fitWidth="157.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.rowIndex="0" GridPane.rowSpan="2" >
+              <Image url="@img/diamond.png"></Image>
+          </ImageView>
       </GridPane>
+
 
 
 
