--- a/src/main/resources/com/example/stonecollection/login-view.fxml
+++ b/src/main/resources/com/example/stonecollection/login-view.fxml
@@ -38,17 +38,24 @@
                <Insets right="10.0" />
             </GridPane.margin></PasswordField>
 
-          <Button alignment="CENTER" mnemonicParsing="false" onAction="#loginClick" prefHeight="32.0" prefWidth="84.0" text="Log in" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.rowIndex="2">
+          <Button mnemonicParsing="false" onAction="#loginClick" prefHeight="32.0" prefWidth="84.0" text="Log in" GridPane.columnSpan="2" GridPane.rowIndex="2">
             <GridPane.margin>
-               <Insets left="165.0" />
+               <Insets left="120.0" />
             </GridPane.margin>
             <font>
                <Font name="System Bold" size="14.0" />
             </font></Button>
 
-          <ImageView fitHeight="150.0" fitWidth="157.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.rowIndex="0" GridPane.rowSpan="2" >
-              <Image url="@img/diamond.png"></Image>
+          <ImageView fitHeight="150.0" fitWidth="157.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.rowIndex="0" GridPane.rowSpan="2">
+              <Image url="@img/diamond.png" />
           </ImageView>
+          <Button mnemonicParsing="false" onAction="#signupClick" prefHeight="32.0" prefWidth="84.0" text="Sign up" GridPane.columnSpan="2" GridPane.rowIndex="2">
+              <GridPane.margin>
+                  <Insets left="220.0" />
+              </GridPane.margin>
+              <font>
+                  <Font name="System Bold" size="14.0" />
+              </font></Button>
       </GridPane>
 
 
