--- a/src/main/resources/com/example/stonecollection/editsemiprecious-view.fxml
+++ b/src/main/resources/com/example/stonecollection/editsemiprecious-view.fxml
@@ -6,9 +6,6 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="420.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.stonecollection.EditSemiPreciousController">
 
-
-
-    <children>
         <GridPane prefHeight="400.0" prefWidth="400.0">
             <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -72,11 +69,7 @@
                     <Font size="14.0" />
                 </font></TextField>
             <Button mnemonicParsing="false" onAction="#onSaveClick" prefHeight="30.0" prefWidth="93.0" text="Save" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="6" />
-            <Button fx:id="onCancelClick" mnemonicParsing="false" onAction="#onCancelClick" prefHeight="30.0" prefWidth="93.0" text="Cancel" GridPane.halignment="CENTER" GridPane.rowIndex="6" />
+            <Button mnemonicParsing="false" onAction="#onCancelClick" prefHeight="30.0" prefWidth="93.0" text="Cancel" GridPane.halignment="CENTER" GridPane.rowIndex="6" />
 
         </GridPane>
-
-
-
-    </children>
 </AnchorPane>
